# Melodify

./: .gitignore  README.md  app.py  config.py  forms.py  pyproject.toml  render.yaml  requirements.txt  run.py  script.py
app/: __init__.py  models.py  routes.py
app/database/: melodify.db
app/forms/: __init__.py
app/models/: user.py
app/routes/: auth_routes.py  dashboard_routes.py  general_routes.py
app/static/css/: animations.css  base.css  components.css  layout.css  responsive.css  theme.css
app/static/js/: main.js  theme.js
app/templates/: base.html  index.html
app/templates/auth/: login.html  register.html
app/templates/general/: contact.html  discover.html  features.html  pricing.html  register.html
instance/: users.db
