[tool.poetry]
name = "melodify"
version = "0.1.0"
description = "Music application"
authors = ["Your Name <your@email.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.0"
gunicorn = "^20.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"