[tool.poetry]
name = "melodify"
version = "0.1.0"
description = "Music application"
authors = ["Your Name <your@email.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
python-dotenv = "^1.1.0"
gunicorn = "^20.1.0"
wtforms = "^3.2.1"  # Explicitly add this
email-validator = "^2.1.1"  # For Email() validator
psycopg2-binary = "^2.9.9"  # Driver PostgreSQL

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
